--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 
 spring.thymeleaf.prefix=classpath:/static/
+
+spring.jpa.open-in-view=false
