--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-
-spring.thymeleaf.prefix=classpath:/static/
-
-spring.jpa.open-in-view=false
+spring.datasource.url=jdbc:mysql://springboot-db.col835s68zpt.ap-northeast-2.rds.amazonaws.com:3306/sundermarket
+spring.datasource.username=mung11
+spring.datasource.password=djaandcl1
+spring.jpa.hibernate.ddl-auto=update
