--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 
-#mySql 세팅
-#spring.datasource.url=jdbc:mysql://project01-db.cwmhlkqc4fam.ap-northeast-2.rds.amazonaws.com:3306/myblog
+# 재승이 mySql 세팅
+#spring.datasource.url=jdbc:mysql://project01-db.cwmhlkqc4fam.ap-northeast-2.rds.amazonaws.com:3306/bunjang
 #spring.datasource.username=lovelyAlien
 #spring.datasource.password=ni**as1n8is
 #spring.jpa.hibernate.ddl-auto=update
