--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 
 #민식님 mySql 세팅
-spring.datasource.url=jdbc:mysql://springboot-db.col835s68zpt.ap-northeast-2.rds.amazonaws.com:3306/sundermarket
-spring.datasource.username=mung11
-spring.datasource.password=djaandcl1
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://springboot-db.col835s68zpt.ap-northeast-2.rds.amazonaws.com:3306/sundermarket
+#spring.datasource.username=mung11
+#spring.datasource.password=djaandcl1
+#spring.jpa.hibernate.ddl-auto=update
 
 
 
 # 재승이 mySql 세팅
-#spring.datasource.url=jdbc:mysql://project01-db.cwmhlkqc4fam.ap-northeast-2.rds.amazonaws.com:3306/bunjang
-#spring.datasource.username=lovelyAlien
-#spring.datasource.password=ni**as1n8is
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://project01-db.cwmhlkqc4fam.ap-northeast-2.rds.amazonaws.com:3306/bunjang
+spring.datasource.username=lovelyAlien
+spring.datasource.password=ni**as1n8is
+spring.jpa.hibernate.ddl-auto=update
 
 #h2 세팅
 #spring.h2.console.enabled=true
