--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,15 +8,14 @@
 
 
 # 재승이 mySql 세팅
-spring.datasource.url=jdbc:mysql://project01-db.cwmhlkqc4fam.ap-northeast-2.rds.amazonaws.com:3306/bunjang
-spring.datasource.username=lovelyAlien
-spring.datasource.password=ni**as1n8is
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://project01-db.cwmhlkqc4fam.ap-northeast-2.rds.amazonaws.com:3306/bunjang
+#spring.datasource.username=lovelyAlien
+#spring.datasource.password=ni**as1n8is
+#spring.jpa.hibernate.ddl-auto=update
 
 #h2 세팅
-#spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:testdb
-
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
 
 spring.thymeleaf.prefix=classpath:/static/
 
