--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 #민식님 mySql 세팅
-spring.datasource.url=jdbc:mysql://springboot-db.col835s68zpt.ap-northeast-2.rds.amazonaws.com:3306/sundermarket
-spring.datasource.username=mung11
-spring.datasource.password=djaandcl1
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://springboot-db.col835s68zpt.ap-northeast-2.rds.amazonaws.com:3306/sundermarket
+#spring.datasource.username=mung11
+#spring.datasource.password=djaandcl1
+#spring.jpa.hibernate.ddl-auto=update
 
 
 
@@ -14,8 +14,8 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=update
 
 #h2 세팅
-#spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
 
 
 spring.thymeleaf.prefix=classpath:/static/
